--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
   background-color: #e6e6e6;
 }
 
-#projects {
+#internship {
+  background-color: #e6e6e6;
+}
+
+#certificate {
   background-color: #e6e6e6;
 }
 
